// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupTitle renders with no subtitle when \`type = default\` 1`] = `
<span>
  metadata title
</span>
`;

exports[`EventOrGroupTitle renders with subtitle when \`type = csp\` 1`] = `
<span>
  <span
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    metadata directive
  </span>
  <em>
    metadata uri
  </em>
  <br />
</span>
`;

exports[`EventOrGroupTitle renders with subtitle when \`type = error\` 1`] = `
<span>
  <span
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    metadata type
  </span>
  <em>
    culprit
  </em>
  <br />
</span>
`;
